Fix alignment and responsiveness

--- a/src/styles/Album.css
+++ b/src/styles/Album.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  max-width: 80%;
+  margin: auto;
 }
 
 .album {
